[TEST] Add test for PostService to verify behavior with null title and no keyword in caption